--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/UserAuth/CreateEditPermission.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/UserAuth/CreateEditPermission.cshtml
@@ -1,12 +1,13 @@
 ﻿@using NetCoreCMS.Modules.Cms.Models.ViewModels.UserAuthViewModels
+
 @model PermissionViewModel
 
 @{
     ViewData["Title"] = "Create Permission Templates";
     ViewData["PageTitle"] = "New Permission Templates";
-
     var expand = true;
     Layout = Constants.AdminLayoutName;
+    var model = Model;
 }
 
  
@@ -27,6 +28,10 @@
             <label for="Group">Group:</label>
             <input type="text" class="form-control" asp-for="Group">
         </div>
+        <div class="form-group">
+            <label for="Group">Group:</label>
+            <input type="text" class="form-control" asp-for="Description">
+        </div>
     </div>
 
     <h4>Select Module Menus</h4>
@@ -46,7 +51,7 @@
 
             var siteMenus = menus.Where(x => x.Type == NetCoreCMS.Framework.Core.Models.ViewModels.Menu.MenuType.WebSite)
                 .GroupBy(y => y.DisplayName,
-                    (key, g) => new { MenuName = key, Items = g.SelectMany(z => z.MenuItems).ToList() }
+                    (key, g) => new { MenuName = key, Menu = g.FirstOrDefault(), Items = g.SelectMany(z => z.MenuItems).ToList() }
                 ).ToList();
 
             <div class="accordion">
@@ -67,7 +72,14 @@
                                 <div class="accordion" id="equipamento-admin-@i">
                                     <div class="accordion-group">
                                         <div class="accordion-heading equipamento">
-                                            <input class="admin-check" type="checkbox" data-container-id="admin-@i" />
+                                            @{
+                                                var checkedTxt = "";
+                                                if (adminMenus.Count > 0) {
+                                                    var checkedMenu = Model.Modules[i].AdminMenus.Where(x => x.IsChecked == true && x.MenuItems.Where(y => y.IsChecked == true).ToList().Count > 0);
+                                                    checkedTxt = "checked";
+                                                }
+                                            }
+                                            <input class="admin-check" type="checkbox" @checkedTxt data-container-id="admin-@i" />
                                             <a class="accordion-toggle" data-parent="#equipamento-admin-@i" data-toggle="collapse" aria-expanded="false" href="#admin-@i">Admin Menus</a>
                                         </div>
                                         <div class="accordion-body collapse" id="admin-@i" aria-expanded="false" style="height:auto;">
@@ -125,7 +137,15 @@
                                 <div class="accordion" id="equipamento-website-@i">
                                     <div class="accordion-group">
                                         <div class="accordion-heading equipamento">
-                                            <input class="website-check" type="checkbox" data-container-id="website-@i" />
+                                            @{
+                                                var checkedTxt = "";
+                                                if (adminMenus.Count > 0)
+                                                {
+                                                    var checkedMenu = Model.Modules[i].SiteMenus.Where(x => x.IsChecked && x.MenuItems.Where(y => y.IsChecked).ToList().Count > 0);
+                                                    checkedTxt = "checked";
+                                                }
+                                            }
+                                            <input class="website-check" type="checkbox" @checkedTxt data-container-id="website-@i" />
                                             <a class="accordion-toggle" data-parent="#equipamento-website-@i" data-toggle="collapse" aria-expanded="false" href="#website-@i">Site Menus</a>
                                         </div>
                                         <div class="accordion-body collapse" id="website-@i" aria-expanded="false" style="height:auto;">
