--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/UserAuth/PermissionTemplates.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/UserAuth/PermissionTemplates.cshtml
@@ -6,3 +6,4 @@
     ViewData["PageTitle"] = "Permission Template.";
     Layout = Constants.AdminLayoutName;
 }
+<a href="/UserAuth/CreateEditPermission" class="btn btn-primary">Create New</a>
